--- a/style.css
+++ b/style.css
@@ -2,14 +2,23 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Josefin Sans', sans-serif;
+    background-color: black;
 }
+
 #container{
-    width: 80vw;
+    width: 60vw;
     margin: auto;
+    background-color: white;
+}
+
+nav{
+    background-color: rgb(30,30,30);
+    color: white;
+
 }
 
 header{
-    height: 300px;
+    width: 40vw;
     background-image: url("images/first-website-header.png");
     background-size: cover;
     position: relative;
@@ -21,12 +30,17 @@ header{
 }
 
 aside{
+    width: 40vw;
     background-color: #333;
     color: white;
     padding: 30px;
     font-family: 'Abril Fatface', serif;
     font-size: 24pt;
     position: relative;
+}
+
+section{
+    width: 60vw;
 }
 
 h1{
@@ -56,4 +70,36 @@ p{
     position: absolute;
     top: 0;
     left: 0;
+}
+
+nav ul{
+    display: flex;
+    justify-content: center;
+}
+
+nav li{
+    list-style-type: none;
+    padding: 15px;
+    font-size: 20pt;
+    font-weight: bold;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:active{
+    color: white;
+}
+
+a:visited{
+    color: white;
+}
+
+a:link{
+    color: white;
+}
+
+.sor{
+    display: flex;
 }
